melhorias na pagina de icones

--- a/theme/templates/icons.html
+++ b/theme/templates/icons.html
@@ -1,11 +1,10 @@
 
+{% extends "base.html" %}
 {% load static %}
 
 {% block title %}Ícones{% endblock %}
-{% block page_title %}Ícones Radix{% endblock %}
-{% block page_description %}{{ total_icons }} ícones disponíveis da biblioteca Radix Icons - Carregamento dinâmico{% endblock %}
 
-{% block component_content %}
+{% block page_content %}
 <div class="max-w-6xl mx-auto space-y-8">
     
     <!-- Introdução -->
