--- a/theme/templates/components/ui/chart.html
+++ b/theme/templates/components/ui/chart.html
@@ -28,7 +28,8 @@ Nota: Este componente requer Chart.js. Adicione ao seu template base:
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 -->
 {% with chart_type=chart_type|default:"line" responsive=responsive|default:True legend=legend|default:True tooltip=tooltip|default:True animation=animation|default:True width=width|default:"100%" height=height|default:"400px" %}
-{% with canvas_id=canvas_id|default:"chart-"|add:chart_type|add:"-"|add:title|slugify|default:"chart-default" %}
+{% with unique_id=title|default:"chart"|slugify|default:"chart" %}
+{% with canvas_id=canvas_id|default:"chart-"|add:chart_type|add:"-"|add:unique_id|default:"chart-default" %}
 <div class="chart-container {{ class|default:'' }}" x-data :style="{ width: '{{ width }}', height: '{{ height }}' }">
     {% if title or description %}
         <div class="chart-header mb-4">
@@ -192,5 +193,6 @@ Nota: Este componente requer Chart.js. Adicione ao seu template base:
         </div>
     </div>
 </div>
+{% endwith %}
 {% endwith %}
 {% endwith %}
